<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitreCreateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/libTvTitreCreateClient"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCreateNomClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libTvCreateNomClient"
                android:textColor="#1976D2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ptSasirNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/libPtSaisirNomClient"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tcCreatePrenomClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libTvCreatePrenomClient"
                android:textColor="#1976D2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ptSaisirPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/libPtSaisirPrenomClient"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvCreateNumTelClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libTvCreateNumTelClient"
                android:textColor="#1976D2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ptSaisirNumTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/libPtSaisirNumTel"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvCreateMailClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libTvCreateMailClient"
                android:textColor="#1976D2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ptSaisirMailClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/libPtSaisirMailClient"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvCreateAdrClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libTvCreateAdrClient"
                android:textColor="#008EFF"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/ptSaisirAdrClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/libPtSaisirAdrClient"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btCreateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libBtCreateClient" />

            <Button
                android:id="@+id/btQuitterCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libBtQuitter" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>