<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateInter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitreCreateInter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/libTvTitreCreateInter"
                android:textColor="#FF0000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCreateIdClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Client concerné" />

            <Spinner
                android:id="@+id/spinnerClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCreateDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date" />

            <EditText
                android:id="@+id/ptSaisiDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvCreateHeure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Heure" />

            <EditText
                android:id="@+id/ptSaisiHeure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvCreateObserv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Observation" />

            <EditText
                android:id="@+id/ptSaisiObserv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btCreateInter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libBtCreateClient" />

            <Button
                android:id="@+id/btQuitterCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libBtQuitter" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>